--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-è
 banner.charset=UTF-8
 server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
@@ -10,7 +9,7 @@ server.port=8083
 
 spring.datasource.url=jdbc:mysql://localhost:3306/springBoot?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=opkcloud2019
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
