--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,40 @@
       <dependency>
           <groupId>redis.clients</groupId>
           <artifactId>jedis</artifactId>
-          <version>2.6.0</version>
+          <version>2.8.1</version>
+      </dependency>
+
+      <!-- spring-redis -->
+      <dependency>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-redis</artifactId>
+          <version>1.7.3.RELEASE</version>
+      </dependency>
+
+      <dependency>
+          <groupId>net.sf.json-lib</groupId>
+          <artifactId>json-lib</artifactId>
+          <version>2.2.3</version>
+          <classifier>jdk15</classifier><!-- jdk版本 -->
+      </dependency>
+
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.1</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>druid</artifactId>
+          <version>1.0.28</version>
+      </dependency>
+
+      <!-- 返回json字符串的支持 -->
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.8.8</version>
       </dependency>
   </dependencies>
 </project>
