update package name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ redis.port=6379
 redis.password=
 redis.expire=
 
-#mybatis.typeAliasesPackage=com.pancm.pojo
+#mybatis.typeAliasesPackage=com.opkcloudoud.pojo
 mybatis.mapperLocations=classpath\:mapper/*.xml
 
 
