--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -2,14 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.opkcloud</groupId>
+    <artifactId>backend</artifactId>
+    <version>1.0</version>
+    <name>backend</name>
+
     <parent>
         <artifactId>springboot-restful</artifactId>
         <groupId>1.0.0</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>backend</artifactId>
 
     <dependencies>
 
