--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
     <modules>
         <module>backend</module>
         <module>flyway</module>
+        <module>utils</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
