--- a/constant/pom.xml
+++ b/constant/pom.xml
@@ -11,5 +11,15 @@
 
     <artifactId>constant</artifactId>
 
+    <dependencies>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
