--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -145,6 +145,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.8</version>
         </dependency>
+        <dependency>
+            <groupId>1.0.0</groupId>
+            <artifactId>utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
