1. 添加 Application 启动信息； 2. 添加时间、文件、获取IP、事务工具类；

--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,13 @@
     <name>springboot-restful</name>
     <url>http://maven.apache.org</url>
 
+    <dependencies>
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+    </dependencies>
 
 </project>
