--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -37,6 +37,13 @@
             <version>5.0.5.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.14</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
