--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>springboot-restful</artifactId>
-        <groupId>1.0.0</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>com.opkcloud</groupId>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
