--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>swagger</module>
         <module>distributedlock</module>
         <module>constant</module>
+        <module>redis</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
